# PocketBench

./: README.md  plan.md  pyproject.toml  requirements.txt
PocketBench/: __init__.py  agent.py  agent_backup.py  config.py  controller.py  models.py  run_simulation.py  turn_detection.py
PocketBench/prompts/: move_analysis.py
PocketBench/utils/: coordinate_finder.py
